Make the site responsible

--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,8 @@
 <html>
 <html lang = "pt-BR">					<!--define o idioma da página-->
 	<head>
-		<meta charset = "UTF - 8">			<!--add o dicionário dos acentos-->				
+		<meta charset = "UTF-8">	
+		<meta name="viewport" content="width=device-width">		<!--add o dicionário dos acentos-->				
 		<title>Contato - Santos FC</title>   	<!--título da aba do navegador-->			
 		<link rel = "stylesheet" href = "reset.css">		<!--endereço CSS-->
 		<link rel = "stylesheet" href = "style.css">	<!--remove as formatações que o navegador automaticamente faz-->	
@@ -10,7 +11,7 @@
  <body>
 	<header>					<!--cabeçalho-->
 		  <div class="caixa">												
-			<h1><img id = "logo" src = "santos.png" alt="Logo do Santos Futebol Clube"></h1> 					
+			<h1><img id="logo" src ="santos.png" alt="Logo do Santos Futebol Clube"></h1> 					
 		 	 <nav>															
 				<ul>														
 					<li><a href = "index.html">Home</a></li> 				
