--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
         <h3 id="sub2"> Títulos </h3>
     <section class="titulos">    
-        <ul>    <!--usar o marcador (ul) no CSS, para colocar imagem ao lado do texto-->
+        <ul class="lista-titulos">    <!--usar o marcador (ul) no CSS, para colocar imagem ao lado do texto-->
             <li class="itens"> Tricampeão da Taça Libertadores 62 - 63 - 11</li>
             <li class="itens"> Bicampeão Mundial Interclubes 62 - 63</li>
             <li class="itens"> Supercopa Sul-Americana 1968</li>
@@ -49,7 +49,7 @@
             <li class="itens"> Copa do Brasil 2010</li>
             <li class="itens"> Recopa Sul-Americana 2012</li>               
         </ul>    
-          <img src = "trofeus.jpg" class = "memorial" alt = "Troféus do Memorial das Conquistas">    
+        <img src="trofeus.jpg" class="memorial" alt="Troféus do Memorial das Conquistas">    
     </section>
         <h4 id = "vila">Estádio Urbano Caldeira - Vila Belmiro</h4>
        <!-- <img class = "estadio" id = "fotovila" src = "vila.jpg">-->
