--- a/produtos.html
+++ b/produtos.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset = "UTF - 8">							
+		<meta charset = "UTF - 8">	
+		<meta name="viewport" content="width=device-width">						
 		<title>Store - Santos FC</title>   				
 		<link rel = "stylesheet" href = "reset.css">		
 		<link rel = "stylesheet" href = "style.css">		
